Fix spacing on ff

--- a/htdocs/styles/main.css
+++ b/htdocs/styles/main.css
@@ -66,6 +66,7 @@ canvas {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
 
   text-align: center;
 }
